--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,6 +18,12 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
 
+      <%= f.label :mobile %>
+      <%= f.number_field :mobile %>
+
+      <%= f.label :carrier %>
+      <%= collection_select(:user, :carrier_id, Carrier.all, :id, :name) %>
+
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
 
     <% end %>
