Write most failing tests for housing preference CRUD

--- a/app/views/housing_preferences/edit.html.erb
+++ b/app/views/housing_preferences/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>HousingPreferences#edit</h1>
-<p>Find me in app/views/housing_preferences/edit.html.erb</p>
+<% provide(:title, 'Edit Preference') %>
+<h1>Edit a Housing Preference</h1>
+<p>Form partial goes here.</p>
