--- a/app/views/housing_preferences/new.html.erb
+++ b/app/views/housing_preferences/new.html.erb
@@ -1,2 +1,3 @@
-<% provide(:title, "New Housing Preference")
+<% provide(:title, "New Housing Preference") %>
 <h1>New Housing Preference</h1>
+<p>Form partial goes here.</p>
