--- a/app/views/housing_preferences/edit.html.erb
+++ b/app/views/housing_preferences/edit.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, 'Edit Preference') %>
 <h1>Edit a Housing Preference</h1>
-<p>Form partial goes here.</p>
+<%= render 'housing_preference_form' %>
