--- a/app/views/housing_preferences/new.html.erb
+++ b/app/views/housing_preferences/new.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "New Housing Preference") %>
 <h1>New Housing Preference</h1>
-<p>Form partial goes here.</p>
+<%= render 'housing_preference_form' %>
