Add rake sample data and start forms for AJAX active toggle

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,9 @@
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
+      <div id="toggle_active_form_container">
+        <%= render 'toggle_active_form' %>
+      </div>
     </section>
   </aside>
   <div class="span8">
