--- a/app/views/users/_activate.html.erb
+++ b/app/views/users/_activate.html.erb
@@ -1,4 +1,4 @@
-<%= form_for (@user, remote: true) do |f| %>
+<%= form_for @user, remote: true do |f| %>
   <div><%= f.hidden_field :active, value: true %></div>
-  <%= f.submit "Activate", class: "btn btn-large btn-primary" %>
+  <%= f.submit "I need housing.", class: "btn btn-large btn-primary" %>
 <% end %>
