--- a/app/views/users/_deactivate.html.erb
+++ b/app/views/users/_deactivate.html.erb
@@ -1,4 +1,4 @@
-<%= form_for (@user, remote: true) do |f| %>
+<%= form_for @user, remote: true do |f| %>
   <div><%= f.hidden_field :active, value: false %></div>
-  <%= f.submit "Deactivate", class: "btn btn-large" %>
+  <%= f.submit "I found housing!", class: "btn btn-large" %>
 <% end %>
