--- a/app/views/housing_preferences/_housing_preference.html.erb
+++ b/app/views/housing_preferences/_housing_preference.html.erb
@@ -2,7 +2,7 @@
   <span class="content">
     <ul>
       <li>City:         <%= housing_preference.city.name %></li>
-      <li>Neighborhood: <%= housing_preference.neighborhood %></li>
+      <li>Neighborhood: <%= housing_preference.city.neighborhoods[housing_preference.neighborhood] unless housing_preference.neighborhood.nil? %></li>
       <li>Housing Type: <%= housing_preference.housing_type %></li>
       <li>Bedrooms:     <%= housing_preference.bedrooms %></li>
       <li>Bathrooms:    <%= housing_preference.bathrooms %></li>
