--- a/app/views/housing_preferences/_housing_preference_form.html.erb
+++ b/app/views/housing_preferences/_housing_preference_form.html.erb
@@ -7,8 +7,8 @@
   <%= f.label :city %>
   <%= collection_select(:housing_preference, :city_id, City.all, :id, :name) %>
 
-  <%= f.label :neighborhood %>
-  <%= select_tag :neighborhood %>
+  <%= f.label      :neighborhood %>
+  <%= f.select     :neighborhood, [ ] %>
 
   <%= f.label        :bedrooms %>
   <%= f.number_field :bedrooms %>
