Add a mostly successful search task. There's still some work to do.

--- a/app/views/housing_preferences/_housing_preference.html.erb
+++ b/app/views/housing_preferences/_housing_preference.html.erb
@@ -15,3 +15,18 @@
     </ul>
   </span>
 </li>
+
+<% if housing_preference.listings.any? %>
+  <% housing_preference.listings.each do |listing| %>
+    <hr>
+    <ul>
+      <li>Title: <%= listing.title %></li>
+      <li>Bedrooms: <%= listing.bedrooms %></li>
+      <li>Cost: <%= listing.cost %></li>
+      <li> <%= link_to "Email", "mailto:#{listing.respond_email}" %>
+           |
+           <%= link_to "Visit Post", "http://#{listing.url}" %></li>
+    </ul>
+  <% end %>
+  <hr>
+<% end %>
